# chat

./: Cargo.toml  readme.md
chat_cli/: Cargo.toml
chat_cli/examples/: async_chat_cli.rs  stress_test.rs
chat_cli/src/: main.rs
chat_client/: Cargo.toml
chat_client/src/: asnc.rs  lib.rs
chat_server/: Cargo.toml
chat_server/examples/: async_chat_server.rs
chat_server/src/: chat.rs  handler.rs  lib.rs  main.rs
chat_tui/: Cargo.toml
chat_tui/examples/: async_chat_tui.rs
chat_tui/src/: async_state.rs  lib.rs  main.rs  state.rs
stp/: Cargo.toml
stp/examples/: async_client.rs  async_server.rs  client.rs  server.rs
stp/src/: client.rs  error.rs  lib.rs  server.rs
stp/src/asnc/: client.rs  mod.rs  server.rs
