[package]
name = "chat_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat_client = { path = "../chat_client" }
anyhow = "1.0.51"
async-trait = "0.1.52"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["net", "macros", "rt-multi-thread", "fs"] }
