[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stp = { path = "../stp" }
anyhow = "1.0.51"
chrono = "0.4.19"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["net", "macros", "rt", "fs", "sync"] }
